Updated APIs to handle better yahoo and google
APIs were slightly redesigned to make rest calls from Google or Yahoo or any other API by moving the rest call to the http api class.

--- a/AutoMarket/AutoMarket/AutoMarket.csproj
+++ b/AutoMarket/AutoMarket/AutoMarket.csproj
@@ -68,7 +68,7 @@
   <ItemGroup>
     <Compile Include="API\ApiGoogleHelper.cs" />
     <Compile Include="API\Candle.cs" />
-    <Compile Include="API\YahooDriver\ApiFinviz.cs" />
+    <Compile Include="API\ApiFinviz.cs" />
     <Compile Include="API\ApiGoogle.cs" />
     <Compile Include="API\ApiHttp.cs" />
     <Compile Include="API\ApiReuters.cs" />
