API Yahoo Historical, Business Days, and Main form
API Yahoo Historical is now working.
Added Business Days which is the total amount of trading days in the market for a defined range of two dates.
Modified the main form to include a few more boxes to select the symbol, interval, and date ranges.

--- a/AutoMarket/AutoMarket/AutoMarket.csproj
+++ b/AutoMarket/AutoMarket/AutoMarket.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\ApiGoogleHelper.cs" />
+    <Compile Include="API\BusinessDays.cs" />
     <Compile Include="API\Candle.cs" />
     <Compile Include="API\ApiFinviz.cs" />
     <Compile Include="API\ApiGoogle.cs" />
