Creating Skeleton for Bases
Decided to create some skeleton for the bases such as a cup with handle. These bases are dynamically instantiated upon run time and auto-discovered by the base class. Still some more work to be done for the skeleton, but compiles good and finds the derived classes from the base class without issues. This tells us that we can add as many bases as we please with the addition of classes and a proper structure.

--- a/AutoMarket/AutoMarket/AutoMarket.csproj
+++ b/AutoMarket/AutoMarket/AutoMarket.csproj
@@ -76,6 +76,12 @@
     <Compile Include="API\ApiTDAmeritrade.cs" />
     <Compile Include="API\ApiYahoo.cs" />
     <Compile Include="APITier2\ApiFinancialData.cs" />
+    <Compile Include="Bases\BaseFinder.cs" />
+    <Compile Include="Bases\CupWithHandler.cs" />
+    <Compile Include="Bases\DoubleBottomWithHandler.cs" />
+    <Compile Include="Bases\HighTightFlag.cs" />
+    <Compile Include="Bases\TightFiveWeeks.cs" />
+    <Compile Include="Bases\TightThreeWeeks.cs" />
     <Compile Include="Forms\Main.cs">
       <SubType>Form</SubType>
     </Compile>
