Adjustments to code
Added double-bottom, removed the doublebottom with handler.
Cleaned up some code.

--- a/AutoMarket/AutoMarket/AutoMarket.csproj
+++ b/AutoMarket/AutoMarket/AutoMarket.csproj
@@ -78,8 +78,10 @@
     <Compile Include="APITier2\ApiFinancialData.cs" />
     <Compile Include="Bases\BaseData.cs" />
     <Compile Include="Bases\BaseFinder.cs" />
+    <Compile Include="Bases\BaseOnBase.cs" />
     <Compile Include="Bases\CupWithHandler.cs" />
-    <Compile Include="Bases\DoubleBottomWithHandler.cs" />
+    <Compile Include="Bases\DoubleBottom.cs" />
+    <Compile Include="Bases\DubbedSquareBox.cs" />
     <Compile Include="Bases\HighTightFlag.cs" />
     <Compile Include="Bases\TightFiveWeeks.cs" />
     <Compile Include="Bases\TightThreeWeeks.cs" />
