--- a/AutoMarket/AutoMarket/AutoMarket.csproj
+++ b/AutoMarket/AutoMarket/AutoMarket.csproj
@@ -77,7 +77,7 @@
     <Compile Include="API\ApiYahoo.cs" />
     <Compile Include="APITier2\ApiFinancialData.cs" />
     <Compile Include="Bases\BaseData.cs" />
-    <Compile Include="Bases\BaseFinder.cs" />
+    <Compile Include="Bases\Base.cs" />
     <Compile Include="Bases\BaseOnBase.cs" />
     <Compile Include="Bases\CupWithHandler.cs" />
     <Compile Include="Bases\DoubleBottom.cs" />
@@ -91,8 +91,14 @@
     <Compile Include="Forms\Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Indicators\IndicatorData.cs" />
+    <Compile Include="Indicators\Indicator.cs" />
+    <Compile Include="Indicators\MarketIndicator.cs" />
+    <Compile Include="Indicators\RadarReturn.cs" />
+    <Compile Include="Indicators\VRREOD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Email.cs" />
     <EmbeddedResource Include="Forms\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
